--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
             </div>
             <div class="flex_inner">
                 <h1 class="header_logo">
-                    <a href="#!">
+                    <a href="/">
                         <img src="./img/logoMain.png" alt="" srcset="">
                     </a>
                 </h1>
                 <nav class="gnb">
                     <ul>
-                        <li><a href="">aT Foret</a>
+                        <li><a href="./doc/story.html">aT Foret</a>
                             <ul class="dropdown">
-                                <li><a href="">브랜드 스토리</a></li>
-                                <li><a href="">찾아오시는 길</a></li>
+                                <li><a href="./doc/story.html">브랜드 스토리</a></li>
+                                <li><a href="./doc/location.html">찾아오시는 길</a></li>
                             </ul>
                         </li>
                         <li><a href="">Weddiing</a>
