--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                             배려와 서비스로 평생의 소중한 기억으로 남길 수 있는 최고의 웨딩을 약속드립니다.
                         </div>
                         <div class="more">
-                            <a href="">more brand story</a>
+                            <a href="/doc/story.html">more brand story</a>
                             <!-- <i class="xi-arrow-right"></i> -->
                         </div>
                     </div>
