--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                                 <li><a href="./doc/location.html">찾아오시는 길</a></li>
                             </ul>
                         </li>
-                        <li><a href="">Weddiing</a>
+                        <li><a href="./doc/hall.html">Weddiing</a>
                             <ul class="dropdown">
-                                <li><a href="">그랜드홀</a></li>
-                                <li><a href="">신부대기실</a></li>
+                                <li><a href="./doc/hall.html">그랜드홀</a></li>
+                                <li><a href="./doc/bride.html">신부대기실</a></li>
                                 <li><a href="">로비라운지</a></li>
                                 <li><a href="">VIP룸</a></li>
                                 <li><a href="">폐백실</a></li>
