--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                             <ul class="dropdown">
                                 <li><a href="./doc/hall.html">그랜드홀</a></li>
                                 <li><a href="./doc/bride.html">신부대기실</a></li>
-                                <li><a href="">로비라운지</a></li>
-                                <li><a href="">VIP룸</a></li>
-                                <li><a href="">폐백실</a></li>
-                                <li><a href="">편의시설</a></li>
+                                <li><a href="./doc/lobby.html">로비라운지</a></li>
+                                <li><a href="./doc/vip.html">VIP룸</a></li>
+                                <li><a href="./doc/courtesy.html">폐백실</a></li>
+                                <li><a href="./doc/other.html">편의시설</a></li>
                             </ul>
                         </li>
                         <li><a href="">2023 Banquet</a>
@@ -50,24 +50,24 @@
                                 <li><a href="">연회장 리모델링</a></li>
                             </ul>
                         </li>
-                        <li><a href="">Guide</a>
+                        <li><a href="./doc/program.html">Guide</a>
                             <ul class="dropdown">
-                                <li><a href="">결혼식 순서</a></li>
-                                <li><a href="">웨딩 체크리스트</a></li>
+                                <li><a href="./doc/program.html">결혼식 순서</a></li>
+                                <li><a href="./doc/check.html">웨딩 체크리스트</a></li>
                             </ul>
                         </li>
-                        <li><a href="">What's New</a>
+                        <li><a href="./doc/event.html">What's New</a>
                             <ul class="dropdown">
-                                <li><a href="">이벤트 &amp; 프로모션</a></li>
-                                <li><a href="">aT포레 갤러리</a></li>
-                                <li><a href="">aT포레 소식</a></li>
+                                <li><a href="./doc/event.html">이벤트 &amp; 프로모션</a></li>
+                                <li><a href="./doc/gallery.html">aT포레 갤러리</a></li>
+                                <li><a href="./doc/news.html">aT포레 소식</a></li>
                             </ul>
                         </li>
-                        <li><a href="">Reservation</a>
+                        <li><a href="./doc/Reservation.html">Reservation</a>
                             <ul class="dropdown">
-                                <li><a href="">예식 예약문의</a></li>
-                                <li><a href="">연회 예약문의</a></li>
-                                <li><a href="">고객의 소리</a></li>
+                                <li><a href="./doc/Reservation.html">예식 예약문의</a></li>
+                                <li><a href="./doc/Banquet_re.html">연회 예약문의</a></li>
+                                <li><a href="./doc/voice.html">고객의 소리</a></li>
                             </ul>
                         </li>
                     </ul>
