--- a/index.html
+++ b/index.html
@@ -78,58 +78,35 @@
 
         <main>
             <section class="mainVisual">
+                <div class="mainSlide_bg">
+
+                </div>
+                <div class="visualText_box">
+                    <div class="visual_top box">
+                        Special Wedding Venue
+                    </div>
+                    <div class="visual_bottom box">
+                        <h2>aT foret</h2>
+                    </div>
+                </div>
                 <div class="mainSlide">
                     <figure class="m_slider s01">
-                        <div class="visualText_box">
-                            <div class="visual_top box">
-                                Special Wedding Venue
-                            </div>
-                            <div class="visual_bottom box">
-                                <h2>aT foret</h2>
-                            </div>
-                        </div>
+
                     </figure>
                     <figure class="m_slider s02">
-                        <div class="visualText_box">
-                            <div class="visual_top box">
-                                Special Wedding Venue
-                            </div>
-                            <div class="visual_bottom box">
-                                <h2>aT foret</h2>
-                            </div>
-                        </div>
+
                     </figure>
                     <figure class="m_slider s03">
-                        <div class="visualText_box">
-                            <div class="visual_top box">
-                                Special Wedding Venue
-                            </div>
-                            <div class="visual_bottom box">
-                                <h2>aT foret</h2>
-                            </div>
-                        </div>
+
                     </figure>
                     <figure class="m_slider s04">
-                        <div class="visualText_box ">
-                            <div class="visual_top box">
-                                Special Wedding Venue
-                            </div>
-                            <div class="visual_bottom box">
-                                <h2>aT foret</h2>
-                            </div>
-                        </div>
+
                     </figure>
                     <figure class="m_slider s05">
-                        <div class="visualText_box ">
-                            <div class="visual_top box">
-                                Special Wedding Venue
-                            </div>
-                            <div class="visual_bottom box">
-                                <h2>aT foret</h2>
-                            </div>
-                        </div>
+
                     </figure>
                 </div>
+
             </section>
 
             <section class="brandStory sec">
@@ -148,7 +125,7 @@
                             배려와 서비스로 평생의 소중한 기억으로 남길 수 있는 최고의 웨딩을 약속드립니다.
                         </div>
                         <div class="more">
-                            <a href="/doc/story.html">more brand story</a>
+                            <a href="./doc/story.html">more brand story</a>
                             <!-- <i class="xi-arrow-right"></i> -->
                         </div>
                     </div>
@@ -182,57 +159,65 @@
                     <p>7m층고에 30m의 버진로드, 여유있고 프라이빗한 단독홀</p>
                 </div>
                 <div class="flex_inner">
-                    <figure class="conImg_box">
-                        <a href="">
+                    <a href="./doc/hall.html">
+                        <figure class="conImg_box">
+
                             <div class="conText_box">
                                 <h3>그랜드홀</h3>
                                 <p>Grand Hall</p>
                             </div>
                             <img src="./img/mainContent01.jpg" alt="">
-                        </a>
-                        <div class="conImg_cover">
-                            background cover
-                        </div>
-                    </figure>
 
-                    <figure class="conImg_box">
-                        <a href="">
+                            <div class="conImg_cover">
+                                background cover
+                            </div>
+                        </figure>
+                    </a>
+
+                    <a href="./doc/bride.html">
+                        <figure class="conImg_box">
+
                             <div class="conText_box">
                                 <h3>신부대기실</h3>
                                 <p>Bride Room</p>
                             </div>
                             <img src="./img/mainContetn02.jpg" alt="">
-                        </a>
-                        <div class="conImg_cover">
-                            background cover
-                        </div>
-                    </figure>
 
-                    <figure class="conImg_box">
-                        <a href="">
+                            <div class="conImg_cover">
+                                background cover
+                            </div>
+                        </figure>
+                    </a>
+
+                    <a href="./doc/lobby.html">
+                        <figure class="conImg_box">
+
                             <div class="conText_box">
                                 <h3>로비 라운지</h3>
                                 <p>Lobby Lounge</p>
                             </div>
                             <img src="./img/mainContetn03.jpg" alt="">
-                        </a>
-                        <div class="conImg_cover">
-                            background cover
-                        </div>
-                    </figure>
 
-                    <figure class="conImg_box">
-                        <a href="">
+                            <div class="conImg_cover">
+                                background cover
+                            </div>
+                        </figure>
+                    </a>
+
+                    <a href="./doc/vip.html">
+                        <figure class="conImg_box">
+
                             <div class="conText_box">
                                 <h3>VIP룸</h3>
                                 <p>VIP Room</p>
                             </div>
                             <img src="./img/mainContetn04.jpg" alt="">
-                        </a>
-                        <div class="conImg_cover">
-                            background cover
-                        </div>
-                    </figure>
+
+                            <div class="conImg_cover">
+                                background cover
+                            </div>
+                        </figure>
+                    </a>
                 </div>
             </section>
 
@@ -243,7 +228,7 @@
                 </div>
                 <div class="flex_inner">
                     <figure class="event_box">
-                        <a href="">
+                        <a href="./doc/event.html">
                             <img src="./img/mainEvent01.jpg" alt="">
                             <div class="eveText_box">
                                 <h3>좋은 예감! 2023 상반기 예식 잔여타임 예약</h3>
@@ -259,7 +244,7 @@
 
 
                     <figure class="event_box">
-                        <a href="">
+                        <a href="./doc/event.html">
                             <img src="./img/mainEvent02.jpg" alt="">
                             <div class="eveText_box">
                                 <h3>2022년 하반기 예식 잔여타임 이벤트</h3>
@@ -274,7 +259,7 @@
                     </figure>
 
                     <figure class="event_box">
-                        <a href="">
+                        <a href="./doc/event.html">
                             <img src="./img/mainEvent03.jpg" alt="">
                             <div class="eveText_box">
                                 <h3>기업행사, 각종 모임 예약접수</h3>
@@ -293,11 +278,14 @@
             <section class="weddingArea">
                 <div class="flex_inner">
                     <div class="news">
-                        <h2>News &amp; Notice</h2>
-                        <p>등록된 뉴스 &amp; 공지사항이 없습니다.</p>
+                        <a href="./doc/news.html">
+                            <h2>News &amp; Notice</h2>
+                            <p>등록된 뉴스 &amp; 공지사항이 없습니다.</p>
+                            <div class="more">hidden</div>
+                        </a>
                     </div>
                     <div class="reservation">
-                        <a href="">
+                        <a href="./doc/Reservation.html">
                             <h2>Reservation</h2>
                             <p>상담 및 방문예약</p>
                             <img src="./img/wedding01.jpg" alt="">
@@ -305,7 +293,7 @@
                         </a>
                     </div>
                     <div class="location">
-                        <a href="">
+                        <a href="./doc/location.html">
                             <h2>Location</h2>
                             <p>찾아오시는 길</p>
                             <img src="./img/wedding02.jpg" alt="">
