--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                         </a>
                     </div>
                     <div class="gallery">
-                        <a href="">
+                        <a href="./doc/gallery.html">
                             <h2>Gallery</h2>
                             <p>aT포레웨딩홀 갤러리</p>
                             <img src="./img/wedding03.jpg" alt="">
