--- a/index.html
+++ b/index.html
@@ -112,11 +112,14 @@
             <section class="brandStory sec">
                 <div class="flex_inner">
                     <div class="brandText_box">
-                        div class="txtbox_top box">
-                            A Special venue for you aT foret wedding party
+                        <div class="txtbox_top box">
+                            A Special venue for you
+                            aT foret wedding party
                         </div>
                         <div class="txtbox_middle box">
-                            모두를 만족시키는 최고의 선택 aT포레 웨딩 &amp; 파티
+                            모두를 만족시키는 최고의 선택
+
+                            aT포레 웨딩 &amp; 파티
                         </div>
                         <div class="txtbox_bottom box">
                             눈부심과 설레임으로 다가오는 특별한 날, 두 사람의 영원한 사랑을 약속하는 아름다운 순간을 aT포레웨딩홀에서 선사해드립니다. 오로지 신랑·신부님 만을 위한 세심한
